--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "title": "Assets Plugin for DocPad",
   "name": "docpad-plugin-assets",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "DocPad plugin to change URL of asset files to contain hash of contents, allowing for effective caching whilst enabling cache busting when contents change",
   "homepage": "https://github.com/docpad/docpad-plugin-assets",
   "license": "MIT",
   "keywords": [
-    "docpad",
-    "docpad-plugin",
     "assets",
     "cache",
+    "cache-busting",
     "cachebusting",
-    "cache-busting"
+    "coffeescript",
+    "docpad",
+    "docpad-plugin",
+    "node"
   ],
   "badges": {
     "list": [
@@ -21,27 +23,39 @@
       "daviddm",
       "daviddmdev",
       "---",
+      "githubsponsors",
       "patreon",
-      "opencollective",
       "flattr",
+      "liberapay",
+      "buymeacoffee",
+      "opencollective",
+      "crypto",
       "paypal",
-      "bitcoin",
       "wishlist"
     ],
     "config": {
-      "patreonUsername": "bevry",
-      "opencollectiveUsername": "bevry",
+      "githubSponsorsUsername": "balupton",
+      "buymeacoffeeUsername": "balupton",
+      "cryptoURL": "https://bevry.me/crypto",
       "flattrUsername": "balupton",
+      "liberapayUsername": "bevry",
+      "opencollectiveUsername": "bevry",
+      "patreonUsername": "bevry",
       "paypalURL": "https://bevry.me/paypal",
-      "bitcoinURL": "https://bevry.me/bitcoin",
-      "wishlistURL": "https://bevry.me/wishlist"
+      "wishlistURL": "https://bevry.me/wishlist",
+      "githubUsername": "docpad",
+      "githubRepository": "docpad-plugin-assets",
+      "githubSlug": "docpad/docpad-plugin-assets",
+      "npmPackageName": "docpad-plugin-assets"
     }
   },
+  "funding": "https://bevry.me/fund",
   "author": "2013+ Jim McDonald <Jim@mcdee.net> (https://github.com/mcdee)",
   "maintainers": [
     "Jim McDonald <Jim@mcdee.net> (https://github.com/mcdee)"
   ],
   "contributors": [
+    "Benjamin Lupton (https://github.com/balupton)",
     "Jim McDonald <Jim@mcdee.net> (https://github.com/mcdee)"
   ],
   "bugs": {
@@ -57,52 +71,50 @@
   },
   "editions": [
     {
-      "description": "coffeescript source code with require for modules",
+      "description": "CoffeeScript source code with Require for modules",
       "directory": "source",
       "entry": "index.coffee",
-      "syntaxes": [
+      "tags": [
         "coffeescript",
         "require"
       ],
       "engines": false
     },
     {
-      "description": "coffeescript compiled for node.js with require for modules",
+      "description": "CoffeeScript compiled for Node.js with Require for modules",
       "directory": "edition-esnext",
       "entry": "index.js",
-      "syntaxes": [
+      "tags": [
         "javascript",
         "esnext",
         "require"
       ],
       "engines": {
-        "node": true,
-        "browsers": false
+        "node": true
       }
     }
   ],
+  "type": "commonjs",
   "main": "edition-esnext/index.js",
   "dependencies": {
     "docpad-baseplugin": "^1.0.3"
   },
-  "peerDependencies": {
-    "docpad": "^6.82.0"
-  },
   "devDependencies": {
+    "@bevry/update-contributors": "^1.15.0",
     "coffeelint": "^2.1.0",
-    "coffeescript": "^2.3.2",
-    "docpad": "^6.82.4",
-    "docpad-plugintester": "^1.3.2",
-    "projectz": "^1.4.0",
-    "valid-directory": "^1.0.0"
+    "coffeescript": "^2.5.1",
+    "docpad": "^6.82.5",
+    "docpad-plugintester": "^1.3.3",
+    "projectz": "^2.13.0",
+    "valid-directory": "^2.8.0"
   },
-  "optionalDependencies": {},
   "scripts": {
-    "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out",
+    "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
     "our:compile": "npm run our:compile:edition-esnext",
-    "our:compile:edition-esnext": "coffee -bco ./edition-esnext ./source",
+    "our:compile:edition-esnext": "coffee -bco ./edition-esnext ./source && echo '{\"type\": \"commonjs\"}' > edition-esnext/package.json",
     "our:deploy": "echo no need for this project",
-    "our:meta": "npm run our:meta:projectz",
+    "our:meta": "npm run our:meta:contributors && npm run our:meta:projectz",
+    "our:meta:contributors": "update-contributors",
     "our:meta:projectz": "projectz compile",
     "our:release": "npm run our:release:prepare && npm run our:release:check-changelog && npm run our:release:check-dirty && npm run our:release:tag && npm run our:release:push",
     "our:release:check-changelog": "cat ./HISTORY.md | grep v$npm_package_version || (echo add a changelog entry for v$npm_package_version && exit -1)",
@@ -110,12 +122,12 @@
     "our:release:prepare": "npm run our:clean && npm run our:compile && npm run our:test && npm run our:meta",
     "our:release:push": "git push origin master && git push origin --tags",
     "our:release:tag": "export MESSAGE=$(cat ./HISTORY.md | sed -n \"/## v$npm_package_version/,/##/p\" | sed 's/## //' | awk 'NR>1{print buf}{buf = $0}') && test \"$MESSAGE\" || (echo 'proper changelog entry not found' && exit -1) && git tag v$npm_package_version -am \"$MESSAGE\"",
-    "our:setup": "npm run our:setup:npm",
-    "our:setup:npm": "npm install",
+    "our:setup": "npm run our:setup:install",
+    "our:setup:install": "npm install",
     "our:test": "npm run our:verify && npm test",
     "our:verify": "npm run our:verify:coffeelint && npm run our:verify:directory",
     "our:verify:coffeelint": "coffeelint ./source",
-    "our:verify:directory": "npx valid-directory",
+    "our:verify:directory": "valid-directory",
     "test": "docpad-plugintester"
   }
 }
