--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Assets Plugin for DocPad",
   "name": "docpad-plugin-assets",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "DocPad plugin to change URL of asset files to contain hash of contents, allowing for effective caching whilst enabling cache busting when contents change",
   "homepage": "https://github.com/docpad/docpad-plugin-assets",
   "license": "MIT",
@@ -43,6 +43,7 @@
       "patreonUsername": "bevry",
       "paypalURL": "https://bevry.me/paypal",
       "wishlistURL": "https://bevry.me/wishlist",
+      "travisTLD": "com",
       "githubUsername": "docpad",
       "githubRepository": "docpad-plugin-assets",
       "githubSlug": "docpad/docpad-plugin-assets",
@@ -55,7 +56,7 @@
     "Jim McDonald <Jim@mcdee.net> (https://github.com/mcdee)"
   ],
   "contributors": [
-    "Benjamin Lupton (https://github.com/balupton)",
+    "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)",
     "Jim McDonald <Jim@mcdee.net> (https://github.com/mcdee)"
   ],
   "bugs": {
@@ -66,7 +67,7 @@
     "url": "https://github.com/docpad/docpad-plugin-assets.git"
   },
   "engines": {
-    "node": ">=6",
+    "node": ">=10",
     "docpad": ">=6"
   },
   "editions": [
@@ -90,21 +91,21 @@
         "require"
       ],
       "engines": {
-        "node": true
+        "node": "10 || 12 || 13 || 14"
       }
     }
   ],
   "type": "commonjs",
   "main": "edition-esnext/index.js",
   "dependencies": {
-    "docpad-baseplugin": "^1.0.3"
+    "docpad-baseplugin": "^1.4.0"
   },
   "devDependencies": {
     "@bevry/update-contributors": "^1.15.0",
     "coffeelint": "^2.1.0",
     "coffeescript": "^2.5.1",
     "docpad": "^6.82.5",
-    "docpad-plugintester": "^1.3.3",
+    "docpad-plugintester": "^1.6.1",
     "projectz": "^2.13.0",
     "valid-directory": "^2.8.0"
   },
